--- a/.github/workflows/push-changes.yml
+++ b/.github/workflows/push-changes.yml
@@ -8,7 +8,7 @@ jobs:
       uses: actions/checkout@v1
       
     - name: "Work around detached head (https://github.com/actions/checkout/issues/6)"
-      run: git checkout $GITHUB_REF
+      run: git checkout ${GITHUB_REF#refs/heads/}
       
     - name: "Configure git"
       run: |
