--- a/.github/workflows/create-monthly-issue.yml
+++ b/.github/workflows/create-monthly-issue.yml
@@ -1,7 +1,7 @@
 name: Create Monthly PTO Issue
 on:
   schedule:
-  - cron: "33 4 4 4,10 *"
+  - cron: "0 0 1 * *"
 jobs:
   create-issue:
     runs-on: ubuntu-latest
