--- a/.github/workflows/create-monthly-issue.yml
+++ b/.github/workflows/create-monthly-issue.yml
@@ -1,4 +1,4 @@
-name: Create Monthly PTO Issue
+name: Create Monthly Time Off Issue
 on:
   schedule:
   - cron: "0 0 1 * *"
@@ -11,4 +11,4 @@ jobs:
         env: 
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          filename: .github/monthly-pto-issue-template.md
+          filename: .github/monthly-time-off-issue-template.md
