--- a/.github/workflows/replace-tabs.yml
+++ b/.github/workflows/replace-tabs.yml
@@ -1,6 +1,6 @@
 # TODO: Test fork PR
 name: "Replace tabs"
-on: pull_request
+on: push
 jobs:
   push-changes:
     runs-on: ubuntu-latest
@@ -14,7 +14,7 @@ jobs:
     - run: cat $GITHUB_EVENT_PATH
 
     - name: "Work around detached head (https://github.com/actions/checkout/issues/6)"
-      run: git checkout ${GITHUB_HEAD_REF#refs/heads/}
+      run: git checkout ${GITHUB_REF#refs/heads/}
       
     - name: "Configure git"
       run: |
