--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -6,3 +6,7 @@ jobs:
     steps:
     - run: echo Hello, world!
     - run: printenv
+    - run: echo $GITHUB_REF
+    - run: echo $GITHUB_HEAD_REF
+    - run: echo $GITHUB_BASE_REF
+    - run: cat $GITHUB_EVENT_PATH
