--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -1,11 +1,12 @@
 name: "Hello World"
 on: [push]
 jobs:
-  build:
+  job:
     runs-on: ubuntu-latest
     steps:
     - run: echo Hello, world!
     - run: printenv
+    - run: echo $GITHUB_EVENT_NAME
     - run: echo $GITHUB_REF
     - run: echo $GITHUB_HEAD_REF
     - run: echo $GITHUB_BASE_REF
