--- a/.github/workflows/replace-tabs.yml
+++ b/.github/workflows/replace-tabs.yml
@@ -1,7 +1,7 @@
 name: "Replace tabs"
 on: push
 jobs:
-  job:
+  update-files:
     runs-on: ubuntu-latest
     steps:
     - name: "Check out the repo"
