--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -1,13 +1,11 @@
 name: "Hello World"
 on: [push]
 jobs:
-  job:
+  say-hello:
     runs-on: ubuntu-latest
     steps:
     - run: echo Hello, world!
     - run: printenv
     - run: echo $GITHUB_EVENT_NAME
     - run: echo $GITHUB_REF
-    - run: echo $GITHUB_HEAD_REF
-    - run: echo $GITHUB_BASE_REF
     - run: cat $GITHUB_EVENT_PATH
