--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -8,4 +8,5 @@ jobs:
     - run: printenv
     - run: echo $GITHUB_EVENT_NAME
     - run: echo $GITHUB_REF
+    - run: echo $GITHUB_SHA
     - run: cat $GITHUB_EVENT_PATH
