--- a/.github/workflows/skip-typing-sudo.yml
+++ b/.github/workflows/skip-typing-sudo.yml
@@ -12,6 +12,6 @@ jobs:
   create-issue:
     runs-on: ubuntu-latest
     steps:
-      - runs: |
+      - run: |
           whoami | tee /i-am-root
           ls -la /i-am-root
