--- a/.github/workflows/skip-typing-sudo.yml
+++ b/.github/workflows/skip-typing-sudo.yml
@@ -15,3 +15,8 @@ jobs:
       - run: |
           whoami | tee /i-am-root
           ls -la /i-am-root
+          
+      - run: |
+          echo $HOME
+          ls -la ~/
+          ls -la /root
