--- a/.github/workflows/skip-typing-sudo.yml
+++ b/.github/workflows/skip-typing-sudo.yml
@@ -6,7 +6,7 @@ on:
 # https://docs.github.com/en/actions/learn-github-actions/workflow-syntax-for-github-actions#defaultsrun
 defaults:
   run:
-    shell: sudo -E bash {0}
+    shell: HOME=/root sudo -E bash {0}
 
 jobs:
   linux:
